# snowsyncmd-mcp

./: .gitignore  Makefile  README.md  pyproject.toml  snowsyncmd_mcp.py
.github/workflows/: publish.yml
snowsyncmd_mcp/: __init__.py  client.py  server.py
