[project]
name = "snowsyncmd-mcp"
version = "1.3.2"
description = "MCP server for the SnowSyncMD Snowflake Native App — exposes schema docs, structured object search, column inspection, real-time annotations, safe read-only SQL queries, and per-user query permission management as Claude tools"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["snowflake", "mcp", "claude", "schema", "documentation"]

dependencies = [
    "mcp>=1.0.0",
    "snowflake-connector-python>=3.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
snowsyncmd-mcp = "snowsyncmd_mcp:main"

[project.urls]
Homepage   = "https://github.com/your-org/snowsyncmd"
PyPI       = "https://pypi.org/project/snowsyncmd-mcp"

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["snowsyncmd_mcp"]
